Runtime changes
Improve and add some `run*.sh` scripts.